--- a/Rektor_2017/Software/Software.tex
+++ b/Rektor_2017/Software/Software.tex
@@ -180,7 +180,7 @@ Kontrola vremenskog razmaka impulsa ostvarena je korištenjem vremenskog sklopa 
 \begin{center}
 	\centering
 	\includegraphics[width=0.9\textwidth]{{state_masina_stepper}.PNG}
-	\captionof{figure}{Automat stanja za generiranje impulsnog signala koraka motora}
+	\captionof{figure}{Logička stanja za generiranje impulsnog signala koraka motora}
 	\label{fig:sm_stepper}
 \end{center}
 
