--- a/Rektor_2017/Sazetak/Sazetak.tex
+++ b/Rektor_2017/Sazetak/Sazetak.tex
@@ -165,7 +165,7 @@
 
 \noindent Ime rada: Dizajn i razvoj male multirotorske letjelice s upravljanjem zasnovanim na pomičnim masama\\
 
-Ovim radom predstavljeno je projektiranje i izrada laboratorijskog modela letjelice upravljane novim konceptom upravljanja. Potreba za novim konceptom proizlazi iz zahtjeva projekta MORUS, koji obuhvaća izradu autonomnog sustava za maritimnu sigurnost i nadzor stanja okoliša. Klasična multirotorska letjelica s električnim motorima zamijenjena je novom letjelicom pogonjenom benzinskim motorima i upravljanom promjenom centra mase. Zbog testiranja i verificiranja novog koncepta letjelice, u fokusu ovog rada je izrada laboratorijskog modela, koji predstavlja platformu za sva daljnja istraživanja. Sustav je opisan nelinearnim matematičkim modelom, koji je nakon linearizacije osnova za projektiranje sustava upravljanja. Projektiranje sustava upravljanja zasniva se na primjeni krivulje mjesta korijena. Nadalje, predstavljena je modifikacija postojeće letjelice \textit{ArduCopter}, koja obuhvaća dodavanje mehanizama pokretnih masa, projektiranje i izradu elektroničkog sklopovlja i programske potpore. Modifikacije mehaničke konstrukcije su projektirane u CAD alatu i potom izrađene primjenom tehnologije 3D printanja. Pogon i upravljanje koračnim motorima osigurano je projekiranjem i izradom elektroničkog sklopovlja i pripadne programske potpore, čija je osnova mikrokontroler \textit{STM32} serije F4. Nakon modifikacije letjelice \textit{ArduCopter}, laboratorijski model je eksperimentalno identificiran, nakon čega je uslijedila analiza i sinteza sustava upravljanja. Izrađeni model, s pripadajućom mehaničkom, sklopovskom i programskom modifikacijom eksperimentalno je ispitan u laboratorijskim uvjetima.
+Ovim radom predstavljeno je projektiranje i izrada laboratorijskog modela letjelice upravljane novim konceptom upravljanja. Potreba za novim konceptom proizlazi iz zahtjeva projekta MORUS, koji obuhvaća izradu autonomnog sustava za maritimnu sigurnost i nadzor stanja okoliša. Klasična multirotorska letjelica s električnim motorima zamijenjena je novom letjelicom pogonjenom benzinskim motorima i upravljanom promjenom centra mase. Zbog testiranja i verificiranja novog koncepta letjelice, u fokusu ovog rada je izrada laboratorijskog modela, koji predstavlja platformu za sva daljnja istraživanja. Sustav je opisan nelinearnim matematičkim modelom, koji je nakon linearizacije osnova za projektiranje sustava upravljanja. Projektiranje sustava upravljanja zasniva se na primjeni krivulje mjesta korijena. Nadalje, predstavljena je modifikacija postojeće letjelice \textit{ArduCopter}, koja obuhvaća dodavanje mehanizama pokretnih masa, projektiranje i izradu elektroničkog sklopovlja i programske potpore. Modifikacije mehaničke konstrukcije projektirane su u CAD alatu i potom izrađene primjenom tehnologije 3D printanja. Pogon i upravljanje koračnim motorima osigurano je projekiranjem i izradom elektroničkog sklopovlja i pripadne programske potpore, čija je osnova mikrokontroler \textit{STM32} serije F4. Nakon modifikacije letjelice \textit{ArduCopter}, laboratorijski model eksperimentalno je identificiran, nakon čega je uslijedila analiza i sinteza sustava upravljanja. Izrađeni model, s pripadajućom mehaničkom, sklopovskom i programskom modifikacijom eksperimentalno je ispitan u laboratorijskim uvjetima.
 
 \medskip
 
