--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -177,6 +177,13 @@
  Element,
  Zagreb 2014.
  
+ \bibitem{fmin}
+ J. C. Lagarias,  J. A. Reeds, M. H. Wright, and P. E. Wright.,
+ \emph{Convergence Properties of the Nelder-Mead Simplex Method in Low Dimensions.},
+ SIAM Journal of Optimization. 
+ Vol. 9, Number 1, 1998,
+  pp. 112–147.
+ 
  \bibitem{px4_docu}
  L. Meier et al.,
  \emph{PX4 Development Guide}, https://dev.px4.io/,
@@ -212,7 +219,6 @@
   Element,
   Zagreb 2010.
    
-  
 \bibitem{urs}
   S. Bogdan,
   \emph{Zračna robotika: Bespilotne letjelice (UAVs)},
