--- a/Rektor_2017/Summary/Summary.tex
+++ b/Rektor_2017/Summary/Summary.tex
@@ -167,7 +167,12 @@
 \noindent Title: Design and development of a small multirotor aerial vehicle with moving mass control	\newline
 
 
-In this paper we present design and development of a small multirotor aerial vehicle (quadrotor) with moving mass control concept. This concept is introduced in the MORUS project, whose goal is to develop an unmanned robotic system for maritime security and environmental monitoring. In the MORUS project a new quadrotor concept, powered by internal combustion engines and stabilized through the shift of the center of gravity, is proposed. To experimentally verify the new concept and alleviate testing of new algorithms, a small scale laboratory model of the MORUS quadrotor concept is built. The laboratory model is based on an existing ArduCopter quadrotor, for which we present mechanical modifications, hardware and software design, which are required to achieve the new concept. We present a mathematical model of the developed vehicle and identification results of important system parameters. Finally, the experimental results are presented, which demonstrate validity of the new quadrotor platform.
+In this paper we present design and development of a small multirotor aerial vehicle (quadrotor) with moving mass control concept. This concept is introduced in the MORUS project, the goal of which is to develop an unmanned robotic system for maritime security and environmental monitoring. In the MORUS project a new quadrotor concept, powered by internal combustion engines and stabilized through the shift of the center of gravity, is proposed. To experimentally verify the new concept and alleviate testing of new algorithms, a small scale laboratory model of the MORUS vehicle concept is built. 
+We present a nonlinear mathematical model of the developed vehicle and identification results of important system parameters  which is, once linearised, used as a basis for control system design.
+The laboratory model is based on an existing ArduCopter aerial vehicle, for which we present mechanical modifications, hardware and software design, required to achieve the new concept.
+Mechanical modifications are constructed using CAD tool and fabricated with a 3D printer.
+Moving mass control is achieved through custom hardware and software design, based on STM32F4 microcontroller.
+Finally, the experimental results are presented, which demonstrate validity of the new aerial vehicle platform.
 
 \medskip
 
