Added link to video and fixed typo

--- a/Rektor_2017/Exp/Exp.tex
+++ b/Rektor_2017/Exp/Exp.tex
@@ -262,7 +262,7 @@ Iz snimljenih odziva vidljivo je da sustav upravljanja zadržava stabilnost uz u
 	\label{fig:rot_odzivi}
 \end{figure}
 
-\noindent Provedenim eksperimentima potvrđena je uspješnost projektiranja sustava upravljanja. Snimljeni odzivi potvrđuju ispravnost i stabilnost ponašanja letjelice.
+\noindent Provedenim eksperimentima potvrđena je uspješnost projektiranja sustava upravljanja. Snimljeni odzivi potvrđuju ispravnost i stabilnost ponašanja letjelice. Video snimka eksperimenta dostupna je na \textit{Youtube} servisu \cite{ytube}.
 
 
 
