--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -195,6 +195,12 @@
   Sinteza linearnih sustava upravljanja, Fakultet elektrotehnike i računarstva,
   Zagreb 2016. 
   
+\bibitem{ytube}
+  M. Bedeković, B. Marić, M. Tomić,
+  \emph{Youtube Video snimka eksperimenta}, \newline
+  https://www.youtube.com/playlist?list=PL0ZEsSIBIB0IuBxcsYqmibSO8v66QWYTk,
+  28. 4. 2017.
+  
 \bibitem{te}
   N. Perić, I. Petrović
   \emph{Teorija estimacije - Postupci identifikacije},
@@ -267,6 +273,8 @@
   Kigen,
   Zagreb 2005.
   
+
+ 
 
   
   
