--- a/Rektor_2017/Uvod/Uvod.tex
+++ b/Rektor_2017/Uvod/Uvod.tex
@@ -187,6 +187,6 @@ Intuitivno je jasno kako su na ovakvu letjelicu postavljeni strogi uvjeti vezani
 
 \medskip
 
-Benzinski motori, unatoč svojim prednostima, otežavaju testiranje jednog ovakvog sustava. Za pokretanje kompleksnog sustava ovih razmjera potrebna je pomno planirana i vremenski dugotrajna priprema. Sami benzinski motori stvaraju buku i ispušne plinove te zahtijevaju pokretanje na otvorenom. U tu svrhu javlja se potreba za izradom laboratorijske makete letjelice, na kojoj će se testirati svi algoritmi razvijeni za veliku letjelicu. Ovaj rad stoga nastoji doprinijeti dizajnu i razvoju laboratorijske mekete letjelice te primijeniti i testirati novi koncept upravljanja bespilotnom letjelicom zasnovan na promjeni centra mase letjelice. 
+Benzinski motori, unatoč svojim prednostima, otežavaju testiranje jednog ovakvog sustava. Za pokretanje kompleksnog sustava ovih razmjera potrebna je pomno planirana i vremenski dugotrajna priprema. Sami benzinski motori stvaraju buku i ispušne plinove te zahtijevaju pokretanje na otvorenom. U tu svrhu javlja se potreba za izradom laboratorijske makete letjelice, na kojoj će se testirati svi algoritmi razvijeni za veliku letjelicu. Ovaj rad stoga nastoji doprinijeti dizajnu i razvoju laboratorijske makete letjelice te primijeniti i testirati novi koncept upravljanja bespilotnom letjelicom zasnovan na promjeni centra mase letjelice. 
 
 \end{document}
