--- a/Rektor_2017/Summary/Summary.tex
+++ b/Rektor_2017/Summary/Summary.tex
@@ -164,7 +164,7 @@
 	
 \noindent Authors: Matija Bedeković, Bruno Marić, Martina Tomić \newline
 
-\noindent Title: Design and development of a small multirotor aerial vehicle with moving mass control	\newline
+\noindent Title: Design and development of a small scale multirotor aerial vehicle with moving mass control	\newline
 
 
 In this paper we present design and development of a small scale multirotor aerial vehicle (MAV) with moving mass control concept. This concept is introduced in the MORUS project, the goal of which is to develop an unmanned robotic system for maritime security and environmental monitoring. MORUS project proposes a new quadrotor concept, powered by internal combustion engines and stabilized through the shift of the center of gravity. To experimentally verify this concept and test the proposed algorithms, a small scale laboratory model of the MORUS vehicle concept is built within this work. 
