--- a/Rektor_2017/Zakljucak/Zakljucak.tex
+++ b/Rektor_2017/Zakljucak/Zakljucak.tex
@@ -176,7 +176,7 @@ Nadalje, postojeća letjelica \textit{ArduCopter} modificirana je dodavanjem kli
 
 
 \medskip
-Rezultat ovog rada je funkcionalna zračna platforma za testiranje i verificiranje novog koncepta upravljanja multirotorskom letjelicom. Eksperimentalni rezultati su potvrdili ispravnost novog koncepta upravljanja letjelicom. Modificirana letjelica \textit{ArduCopter} postaje platforma za sve buduće algoritme upravljanja, uključujući planiranje i izvođenje trajektorija, manipulaciju objektima i sl.
+Rezultat ovog rada je funkcionalna zračna platforma za testiranje i verificiranje novog koncepta upravljanja multirotorskom letjelicom. Eksperimentalni rezultati potvrdili su ispravnost novog koncepta upravljanja letjelicom. Modificirana letjelica \textit{ArduCopter} postaje platforma za sve buduće algoritme upravljanja, uključujući planiranje i izvođenje trajektorija, manipulaciju objektima i sl.
 
 
 \end{document}
