--- a/Rektor_2017/Identifikacija/Identifikacija.tex
+++ b/Rektor_2017/Identifikacija/Identifikacija.tex
@@ -304,7 +304,7 @@ Identifikacija se provodi u programskom okruženju \textit{Matlab} koristeći \t
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
-		\includegraphics[width=1\linewidth]{2}
+		\includegraphics[width=1\linewidth]{mj2}
 		\caption{$I_{yy} = 0.08515 \ kg \cdot m^{2}$}
 		\label{fig:mj2}
 	\end{subfigure}
